--- a/index.html
+++ b/index.html
@@ -87,15 +87,12 @@
                   </div>
 
                   <div class="home__social">
-                     <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
-                        <i class="ri-instagram-line"></i>
-                     </a>
-
-                     <a href="https://www.linkedin.com/" target="_blank" class="home__social-link">
+              
+                     <a href="https://www.linkedin.com/in/samrawitf" target="_blank" class="home__social-link">
                         <i class="ri-linkedin-box-line"></i>
                      </a>
 
-                     <a href="https://github.com/" target="_blank" class="home__social-link">
+                     <a href="https://github.com/samf2018/Python3/blob/master/MachineLearning/" target="_blank" class="home__social-link">
                         <i class="ri-github-line"></i>
                      </a>
                   </div>
@@ -155,7 +152,7 @@
                         <i class="ri-send-plane-line"></i> Contact Me
                      </a>
 
-                     <a href="https://www.linkedin.com/" target="_blank" class="button__ghost">
+                     <a href="https://www.linkedin.com/in/samrawitf" target="_blank" class="button__ghost">
                         <i class="ri-linkedin-box-line"></i>
                      </a>
                   </div>
@@ -461,10 +458,6 @@
 
                   <div class="contact__social-data">
                      <div>
-                        <p class="contact__social-description-1">
-                           Does not send emails
-                        </p>
-   
                         <p class="contact__social-description-2">
                            Write me on my social networks
                         </p>
@@ -473,10 +466,6 @@
                      <div class="contact__social-links">
                         <a href="https://www.facebook.com/" class="contact__social-link" target="_blank">
                            <i class="ri-facebook-circle-line"></i>
-                        </a>
-   
-                        <a href="https://www.instagram.com/isamrawit" class="contact__social-link" target="_blank">
-                           <i class="ri-instagram-line"></i>
                         </a>
    
                         <a href="https://www.linkedin.com/in/samrawitf" class="contact__social-link" target="_blank">
